--- a/language-study-slides/index.htm
+++ b/language-study-slides/index.htm
@@ -40,8 +40,8 @@
 </td>
 <td valign=top width=50%>
 <p><strong>Author:</strong> Pixel</p>
-<p><strong>E-mail:</strong> <a href="mailto:pixel@merd.net">pixel at merd dot net</a></p>
-<p><strong>Homepage:</strong> <a href="http://merd.net/pixel/">merd.net/pixel</a> </p>
+<p><strong>E-mail:</strong> <a href="mailto:pixel@rigaux.org">pixel at merd dot net</a></p>
+<p><strong>Homepage:</strong> <a href="http://rigaux.org/">merd.net/pixel</a> </p>
 <p><strong>Copyright:</strong> <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation
 License)</a> (please email me if you use these slides, just that i know it's used :)</p>
 <p><strong>Original document</strong> <a href="language-study-slides.sdd">OpenOffice file</a></p>
