--- a/various/mutability-and-sharing/index.html
+++ b/various/mutability-and-sharing/index.html
@@ -68,7 +68,7 @@ Languages using deep copy by default always have a special way to get a shallow 
 <p>
 
 Languages using shallow copy by default sometimes have a way to get deep copy: <tt>copy</tt> in Smalltalk, <tt>Clone</tt> in C#, <tt>copy.copy</tt> in Python...
-(<a href="http://merd.net/pixel/language-study/syntax-across-languages.html#Object Oriented & Reflexivity">more</a>, search "object cloning")
+(<a href="http://rigaux.org/language-study/syntax-across-languages.html#Object Oriented & Reflexivity">more</a>, search "object cloning")
 
 
 
@@ -210,7 +210,7 @@ p := !p + 1
 </ul>
 
 <hr>
-<address><a href="mailto:pixel@merd.net">Pixel</a></address>
+<address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
 <p>Release: $Id: index.html,v 1.4 2002/12/11 19:56:40 pixel Exp $
 
