--- a/various/non-mutable-objects-and-subtyping/index.html
+++ b/various/non-mutable-objects-and-subtyping/index.html
@@ -163,7 +163,7 @@ this one, make your own opinion)
 </ul>
 
 <hr>
-<address><a href="mailto:pixel@merd.net">Pixel</a></address>
+<address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
 <p>Release: $Id: index.html,v 1.18 2002/08/18 11:30:45 pixel Exp $
 
