--- a/various/is-a-cow-an-animal/index.html
+++ b/various/is-a-cow-an-animal/index.html
@@ -154,7 +154,7 @@ a_cow.slaughter()      # a_cow is dead, it can't be slaughtered again
 </ul>
 
 <hr>
-<address><a href="mailto:pixel@merd.net">Pixel</a></address>
+<address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
 <p>Release: $Id: index.html,v 1.13 2002/05/13 20:24:37 pixel Exp $
 
