*** empty log message ***

--- a/various/non-mutable-objects-and-subtyping/index.html
+++ b/various/non-mutable-objects-and-subtyping/index.html
@@ -138,7 +138,7 @@ doesn't fulfill goal #3.
     Point3d)</tt>. The difference between Goal #2 or Goal #3 comes from having
     Point3d a subtype of Point2d or not. multi-methods are nice :)
 
-    <p><li>Java do not benefit much from its type system.
+    <p><li>Java (< Java2 5.0) do not benefit much from its type system.
     The lack of generics do not allow much. For <tt>translate</tt> a solution
     is to define it with the precise return type in both Point2d and Point3d.
     <tt>twice</tt> returning a Point3d when given a Point3d is only possible
