*** empty log message ***

--- a/various/non-mutable-objects-and-subtyping/index.html
+++ b/various/non-mutable-objects-and-subtyping/index.html
@@ -165,8 +165,6 @@ this one, make your own opinion)
 <hr>
 <address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
-<p>Release: $Id: index.html,v 1.18 2002/08/18 11:30:45 pixel Exp $
-
-<p><A HREF="http://www.estat.com/getstats?serial=1400113423"><IMG SRC="http://perso.estat.com/cgi-bin/perso/1400113423?page=language-study" BORDER=0></A>
+<p>Release: $Id$
 
 </body></html>
