*** empty log message ***

--- a/various/is-a-cow-an-animal/index.html
+++ b/various/is-a-cow-an-animal/index.html
@@ -156,8 +156,6 @@ a_cow.slaughter()      # a_cow is dead, it can't be slaughtered again
 <hr>
 <address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
-<p>Release: $Id: index.html,v 1.13 2002/05/13 20:24:37 pixel Exp $
-
-<p><A HREF="http://www.estat.com/getstats?serial=1400113423"><IMG SRC="http://perso.estat.com/cgi-bin/perso/1400113423?page=language-study" BORDER=0></A>
+<p>Release: $Id$
 
 </body></html>
