--- a/various/mutability-and-sharing/index.html
+++ b/various/mutability-and-sharing/index.html
@@ -212,7 +212,7 @@ p := !p + 1
 <hr>
 <address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
-<p>Release: $Id: index.html,v 1.4 2002/12/11 19:56:40 pixel Exp $
+<p>Release: $Id$
 
 </body>
 </html>
