do not use estat anymore

--- a/usenet-traffic-ranking/index.html
+++ b/usenet-traffic-ranking/index.html
@@ -85,7 +85,6 @@ with a script for gnuplot.
 <hr>
 <address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
-
-<p><A HREF="http://www.estat.com/getstats?serial=1400113423"><IMG SRC="http://perso.estat.com/cgi-bin/perso/1400113423?page=language-study" BORDER=0></A>
+<p>Release: $Id: index.html 314 2006-06-23 10:09:30Z pixel $
 
 </body></html>
