--- a/icfp-figures.html
+++ b/icfp-figures.html
@@ -321,8 +321,7 @@
 <hr>
 <address><a href="mailto:pixel@rigaux.org">Pixel</a></address>
 This document is licensed under <a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a> (GNU Free Documentation License).
-
-<p><A HREF="http://www.estat.com/getstats?serial=1400113423"><IMG SRC="http://perso.estat.com/cgi-bin/perso/1400113423?page=language-study" BORDER=0></A>
+<p>Release: $Id: $
 
 </body>
 </html>
