--- a/various/mutability-and-sharing/index.html
+++ b/various/mutability-and-sharing/index.html
@@ -24,6 +24,8 @@ I = Immutable, D = Deep, S = Shallow, C = Constructor is Constant (see below)
 <tr><td colspan=5></td></tr>
 <tr><td><a href="python.listing">Python     </a></td><td>   I   </td><td>  I   </td><td>   S      </td><td>    S        </td></tr>
 <tr><td><a href="java.listing">  Java       </a></td><td>   I   </td><td>  I   </td><td>   S      </td><td>    S        </td></tr>
+<tr><td><a href="javascript.listing">
+                                 Javascript </a></td><td>   I   </td><td>  I   </td><td>   S      </td><td>    S        </td></tr>
 <tr><td><a href="csharp.listing">C#         </a></td><td>   I   </td><td>  I   </td><td>   S      </td><td>   D/S       </td></tr>
 
 <tr><td colspan=5></td></tr>
