remove link to mirrors

--- a/diagram.html
+++ b/diagram.html
@@ -1,11 +1,10 @@
-include(`../mirrors.m4')
 <html>
   <head>
     <title>diagram & history of programming languages</title>
   </head>
 
 <body>
-    MACRO_MIRRORS_LINK(index.html, ` to Pixel''`s programming languages study page', language-study/diagram.html)
+    <small> <a href="index.html">&lt;- back to Pixel's programming languages study page</a> </small> <p>
 
 Do you know any good diagram of programming languages history?
 
