add ATS (Hongwei Xi) and Scala (Jari-Matti Makela)

--- a/various/is-a-cow-an-animal/index.html
+++ b/various/is-a-cow-an-animal/index.html
@@ -88,12 +88,13 @@ IMPORTANT: feeding a cow with something else than grass is a fatal error
 <tr><td><a href="ocaml.listing">OCaml</a></td><td>5/11 should_fails detected at compile-time</td></tr>
 <tr><td><a href="ocaml2.listing">OCaml with parametric class tentative</a></td><td>1/11 should_fails succeeds :-(, 7/11 should_fails detected at compile-time</td></tr>
 <tr><td><a href="ocaml3.listing">OCaml with parametric class and variants</a></td><td>8/11 should_fails detected at compile-time</td></tr>
-<tr><td><a href="ocaml5.listing">OCaml with parametric class and variants, purely functional</a></td><td>10/11 should_fails detected at compile-time, but doesn't ensure previous elements are not used</td></tr>
 <tr><td><a href="prolog.listing">Prolog tentative</a></td><td>3/11 should_fails succeeds :-( and 0/11 detected at compile-time</td></tr>
 <tr><td><a href="haskell.listing">Haskell faking OO, no monad</a></td><td>5/11 should_fails detected at compile-time, but doesn't ensure previous elements are not used</td></tr>
 <tr><td><a href="haskell2.listing">Haskell with phantom types (simple)</a></td><td>8/11 should_fails detected at compile-time, but doesn't ensure previous elements are not used</td></tr>
 <tr><td><a href="haskell2bis.listing">Haskell with phantom types (with type hierarchy)</a></td><td>8/11 should_fails detected at compile-time, but doesn't ensure previous elements are not used</td></tr>
 <tr><td><a href="haskell3.listing">Haskell with monads and phantom types</a></td><td>8/11 should_fails detected at compile-time</td></tr>
+<tr><td><a href="scala.listing">Scala</a></td><td>11/11 should_fails detected at compile-time, but doesn't ensure previous elements are not used</td></tr>
+<tr><td><a href="ats.sats.listing">ATS</a> (<a href="ats.dats.listing">test code</a>)</td><td>11/11 should_fails detected at compile-time</td></tr>
 </table>
 
 <hr>
