diagram.html: fix links

--- a/diagram.html
+++ b/diagram.html
@@ -12,15 +12,15 @@ Do you know any good diagram of programming languages history?
 <tr><td>
 Simplified version
 <br>with only main languages
-<br><a href="http://people.mandriva.com/~prigaux/language-study/diagram-light.png"><img src="http://people.mandriva.com/~prigaux/language-study/diagram-light-thumbnail.png" alt="diagram-light"></a>
-<br><a href="http://people.mandriva.com/~prigaux/language-study/diagram-light.pdf">PDF</a>, <a href="http://people.mandriva.com/~prigaux/language-study/diagram-light.ps.gz">printable PostScript</a>
+<br><a href="http://rigaux.org/language-study/diagram-light.png"><img src="http://rigaux.org/language-study/diagram-light-thumbnail.png" alt="diagram-light"></a>
+<br><a href="http://rigaux.org/language-study/diagram-light.pdf">PDF</a>, <a href="http://rigaux.org/language-study/diagram-light.ps.gz">printable PostScript</a>
 
 </td><td>
 
 Messy full version
 <br>more than 150 languages
-<br><a href="http://people.mandriva.com/~prigaux/language-study/diagram.png"><img src="http://people.mandriva.com/~prigaux/language-study/diagram-thumbnail.png" alt="diagram"></a>
-<br><a href="http://people.mandriva.com/~prigaux/language-study/diagram.pdf">PDF</a>, <a href="http://people.mandriva.com/~prigaux/language-study/diagram.ps.gz">printable PostScript</a>
+<br><a href="http://rigaux.org/language-study/diagram.png"><img src="http://rigaux.org/language-study/diagram-thumbnail.png" alt="diagram"></a>
+<br><a href="http://rigaux.org/language-study/diagram.pdf">PDF</a>, <a href="http://rigaux.org/language-study/diagram.ps.gz">printable PostScript</a>
 
 </td></tr></table>
 
