is-a-cow-an-animal: add java & typescript

--- a/various/is-a-cow-an-animal/index.html
+++ b/various/is-a-cow-an-animal/index.html
@@ -95,6 +95,9 @@ IMPORTANT: feeding a cow with something else than grass is a fatal error
 <tr><td><a href="haskell3.listing">Haskell with monads and phantom types</a></td><td>8/11 should_fails detected at compile-time</td></tr>
 <tr><td><a href="scala.listing">Scala</a></td><td>11/11 should_fails detected at compile-time, but doesn't ensure previous elements are not used</td></tr>
 <tr><td><a href="ats.sats.listing">ATS</a> (<a href="ats.dats.listing">test code</a>)</td><td>11/11 should_fails detected at compile-time</td></tr>
+<tr><td><a href="typescript.listing">Typescript</a></td><td>8/11 should_fails detected at compile-time</td></tr>
+<tr><td><a href="java.listing">Java</a></td><td>5/11 should_fails detected at compile-time</td></tr>
+<tr><td><a href="java2.listing">Java with generics</a></td><td>8/11 should_fails detected at compile-time</td></tr>
 </table>
 
 <hr>
